--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -13,6 +13,7 @@
 /*03-layout*/
 @import "03-layout/l-grid";
 @import "03-layout/l-mediaq--small";
+@import "03-layout/l-coulmns";
 
 /*04-modules*/
 @import "04-modules/sections";
