--- a/app/scss/02-base/_headings.scss
+++ b/app/scss/02-base/_headings.scss
@@ -3,10 +3,10 @@
 --------------------------------------------------------------------- */
 
 h1 {
-    font-family: $base-heading-family, cursive;
-    font-size: 3rem;
-    font-style: normal;
-    font-weight: 400;
+    font-family: sans-serif;
+    font-size: 7rem;
+    text-transform: uppercase;
+    letter-spacing: .5rem;
 }
 
 h2 {
