--- a/app/scss/00-helper/01-variables/_fonts.scss
+++ b/app/scss/00-helper/01-variables/_fonts.scss
@@ -5,3 +5,4 @@ Fonts
 $base-font-family: "PT Sans", sans-serif;
 $base-heading-family: "Abril Fatface", cursive;
 $base-font-size: 14px;
+$script: 'Yesteryear', cursive;
