--- a/app/scss/02-base/_headings.scss
+++ b/app/scss/02-base/_headings.scss
@@ -3,28 +3,32 @@
 --------------------------------------------------------------------- */
 
 h1 {
-    font-family: sans-serif;
+    font-family: $script;
     font-size: 7rem;
-    text-transform: uppercase;
-    letter-spacing: .5rem;
+    float: right;
+    color: $heather;
+    text-shadow: 2px 2px $wine;
 }
 
 h2 {
-    font-family: $base-heading-family, cursive;
-    font-size: 1.375rem;
+    font-family: $script;
+    font-size: 4.5rem;
     font-weight: 600;
 }
 
 h3 {
-    font-size: 1.125rem;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
     font-weight: 300;
+    padding-bottom: .75rem;
 }
 
 p {
-    font-family: $base-font-family, sans-serif;
-    font-size: 1rem;
-    font-weight: 200;
-    line-height: 1.8rem;
+    font-family: sans-serif;
+    font-size: .8rem;
+    line-height: 1.6rem;
+    padding-bottom: .75rem;
 }
 
 a { 
