--- a/app/scss/03-layout/_l-coulmns.scss
+++ b/app/scss/03-layout/_l-coulmns.scss
@@ -1,17 +1,17 @@
-.columns--2 {
+.columns__2 {
   -moz-column-count: 2; /* Firefox */
   -webkit-column-count: 2; /* Safari and Chrome */
   column-count: 2;
-  -webkit-column-gap: 3rem; /* Chrome, Safari, Opera */
-  -moz-column-gap: 3rem; /* Firefox */
-  column-gap: 3rem;
+  -webkit-column-gap: 2rem; /* Chrome, Safari, Opera */
+  -moz-column-gap: 2rem; /* Firefox */
+  column-gap: 2rem;
 }
 
-.columns--3 {
+.columns__3 {
   -moz-column-count: 3; /* Firefox */
   -webkit-column-count: 3; /* Safari and Chrome */
   column-count: 3;
-  -webkit-column-gap: 3rem; /* Chrome, Safari, Opera */
-  -moz-column-gap: 3rem; /* Firefox */
-  column-gap: 3rem;
+  -webkit-column-gap: 2.5rem; /* Chrome, Safari, Opera */
+  -moz-column-gap: 2.5rem; /* Firefox */
+  column-gap: 2.5rem;
 }
