--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -8,7 +8,6 @@
 
 /*02-base*/
 @import "02-base/headings";
-@import "02-base/navigation";
 
 /*03-layout*/
 @import "03-layout/l-grid";
@@ -16,7 +15,9 @@
 @import "03-layout/l-coulmns";
 
 /*04-modules*/
+@import "04-modules/hero";
 @import "04-modules/sections";
 @import "04-modules/email-sections";
+@import "04-modules/navigation";
 
 /*05-states*/
