--- a/app/scss/02-base/_headings.scss
+++ b/app/scss/02-base/_headings.scss
@@ -12,11 +12,12 @@ h1 {
 
 h2 {
     font-family: $script;
-    font-size: 4.5rem;
+    font-size: 5.2rem;
     font-weight: 600;
 }
 
 h3 {
+    color: $wine;
     font-size: 1.5rem;
     text-transform: uppercase;
     letter-spacing: 2px;
