--- a/app/scss/04-modules/_sections.scss
+++ b/app/scss/04-modules/_sections.scss
@@ -15,7 +15,7 @@ nav {
 }
 
 section {
-  padding: 0 10% $gutter 10%;
+  padding: 5% 10% 5% 10%;
 }
 
 .button {
@@ -25,8 +25,26 @@ section {
 }
 
 .hero {
-    margin-top: -25%;
-    margin-right: 2%;
+  margin-top: -25%;
+  margin-right: 2%;
+
+  @media (min-width: map-get($breakpoints, large)) {
+    font-size: 13rem;
+    margin-right: 10%;
+  }
+
+  @media (max-width: map-get($breakpoints, medium)) {
+    margin: 10%;
+    margin-right: 10%;
+    font-size: 5rem;
+    float: right;
+  }
+
+  @media (max-width: map-get($breakpoints, small)) {
+    margin: 10%;
+    font-size: 3.2rem;
+    float: left;
+  }
 }
 
 .section__caption {
@@ -38,25 +56,15 @@ section {
   color: $wine;
 }
 
+.mailing-list {
+  background-color: $heather;
+  padding-top: 5%;
+  padding-bottom: 8%;
+  margin-top: 5%;
+}
+
 .footer {
   background-color: $wine;
   color: #fff;
   padding: 2% 10%;
-}
-
-.mailing-list {
-  background-color: $heather;
-  padding-top: $gutter;
-  padding-bottom: $gutter*2;
-}
-
-.gallery {
-    display: -webkit-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    flex-direction: row;
-}
-
-.gallery li {
-    flex: 2;
 }
